--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="../cases/index.html">ქეისები <span class="label label-warning">ახალი</span></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://radio.aurora-rp.com/">რადიო</a>
+                        <a class="page-scroll" href="https://link.radioking.com/arlingtonradio">რადიო</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="index.html">სტატისტიკა</a>
