--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="page-scroll" href="cases/index.html">ქეისები <span class="label label-warning">ახალი</span></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://radio.aurora-rp.com/">რადიო</a>
+                        <a class="page-scroll" href="https://link.radioking.com/arlingtonradio">რადიო</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="about/index.html">სტატისტიკა</a>
