--- a/profile/index.html
+++ b/profile/index.html
@@ -54,7 +54,7 @@
                         <a class="page-scroll" href="../cases/index.html">ქეისები <span class="label label-warning">ახალი</span></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://radio.aurora-rp.com/">რადიო</a>
+                        <a class="page-scroll" href="https://link.radioking.com/arlingtonradio">რადიო</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="../about/index.html">სტატისტიკა</a>
@@ -62,7 +62,7 @@
                 </ul>
                                 <ul class="nav navbar-nav navbar-right">
                       <li>
-                          <a class="btn btn-primary page-scroll btn-sm" id="btnLogin" data-toggle="modal" title="Войти" href="index.html">შესვლა</a>
+                          <a class="btn btn-primary page-scroll btn-sm" id="btnLogin" data-toggle="modal" title="შესვლა" href="index.html">შესვლა</a>
                       </li>
                 </ul>
                             </div>
