--- a/map/index.html
+++ b/map/index.html
@@ -29,7 +29,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar">
-                    <span class="sr-only">Меню</span>
+                    <span class="sr-only">მენიუ</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -54,7 +54,7 @@
                         <a class="page-scroll" href="../cases/index.html">ქეისები <span class="label label-warning">ახალიspan></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://radio.aurora-rp.com/">რადიოa>
+                        <a class="page-scroll" href="https://link.radioking.com/arlingtonradio">რადიო</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="../about/index.html">სტატისტიკა>
@@ -62,7 +62,7 @@
                 </ul>
                                 <ul class="nav navbar-nav navbar-right">
                       <li>
-                          <a class="btn btn-primary page-scroll btn-sm" id="btnLogin" data-toggle="modal" title="Войти" href="../profile/index.html">შესვლა>
+                          <a class="btn btn-primary page-scroll btn-sm" id="btnLogin" data-toggle="modal" title="შესვლა" href="../profile/index.html">შესვლა>
                       </li>
                 </ul>
                             </div>
